--- a/testapp/templates/testapp/company_list.html
+++ b/testapp/templates/testapp/company_list.html
@@ -4,4 +4,8 @@
         {%for company in company_list%}
             <h2><a href="/{{company.id}}">{{company.name}}</a> </h2>
         {%endfor%}
+        <hr>
+        <br>
+        <br>
+        <a href="/create" class="btn btn-lg btn-primary">Add New Company</a>
     {%endblock%}
