--- a/testapp/templates/testapp/company_detail.html
+++ b/testapp/templates/testapp/company_detail.html
@@ -4,4 +4,7 @@
         <h2>Location: {{company.location}}</h2>
         <h2>CEO: {{company.ceo}}</h2>
         <a href="/update/{{company.id}}" class="btn btn-lg btn-warning">Update Company Information</a>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        <a href="/delete/{{company.id}}" class="btn btn-lg btn-danger">Delete Company Information</a>
+
     {%endblock%}
